k8s-deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: php-single-deploy

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: php-single-deploy
  name: laravel-app
  labels:
    app: laravel-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-app
  strategy: {}
  template:
    metadata:
      labels:
        app: laravel-app
    spec:
      containers:
        - name: nginx
          image: ccr.ccs.tencentyun.com/yaxin-cn/k8s-laravel-app-nginx:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /app
              name: src
              readOnly: false
        - name: php-fpm
          image: ccr.ccs.tencentyun.com/yaxin-cn/k8s-laravel-app-phpfpm:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /app
              name: src
              readOnly: false
      volumes:
        - name: src
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: php-single-deploy
  name: laravel-app
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: laravel-app

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: php-single-deploy
  name: laravel-app
spec:
  rules:
  - host: php-single-deploy.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: laravel-app
            port:
              number: 80
